--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 </head>
 
-<body style="background color:"#FFDAB;"> </body>
+<body style="background color:"#FFDAB;"> 
 <body>
 
 <p>Welcome to my Amahzing Website!</p>
