--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
 
 </head>
 
-<body style="background color:"#FFDAB;"> 
-
+<body style="background-color:powderblue;">
 
 <p>Welcome to my Amahzing Website!</p>
 
