--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body style="background-color:powderblue;">
 
-<p>Welcome to my Amahzing Website!</p>
+<p><center></center>Welcome to my Amahzing Website!</p>
 
 </body>
 <p> I added an Italian Renaissance picture of a dog by Tintoretto </p>
