--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body style="background-color:powderblue;">
 
-<p><style>{text-align:center}</style>Welcome to my Amahzing Website!</p>
+<style>{text-align:center}</style><p>Welcome to my Amahzing Website!</p>
 
 </body>
 <p> I added an Italian Renaissance picture of a dog by Tintoretto </p>
