--- a/index.html
+++ b/index.html
@@ -1,13 +1,9 @@
 <!DOCTYPE html>
-
-<html>
+<body style="background-color:powderblue;"><html>
 
 <head>
-<link rel="stylesheet" href="style.css">
 
 </head>
-
-<body style="background-color:powderblue;">
 
 <style>{text-align:center}</style><p>Welcome to my Amahzing Website!</p>
 
