--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 </head>
 
-<style>{text-align:center}</style><p>Welcome to my Amahzing Website!</p>
+<h1 style=text-align;center>Welcome to My Website!</h1>
 
 </body>
 <p> I added an Italian Renaissance picture of a dog by Tintoretto </p>
