--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 </head>
 
-<h1 style="text-align:center;>"Welcome to My Website!</h1>
+<p style="text-align:center;>"Welcome to My Website!</p>
 
 </body>
 <p> I added an Italian Renaissance picture of a dog by Tintoretto </p>
