--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 </head>
 
-<p style="text-align:center;""font-family:verdana;">Welcome to My Website!</p>
+<p style="text-align:center;font-family:verdana;">Welcome to My Website!</p>
   
 <p> I added an Italian Renaissance picture of a dog by Tintoretto </p>
   
