--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 
 </head>
 
-<p style="text-align:center;font-family:verdana;">Welcome to My Website!</p>
+<p style="text-align:center;font-family:verdana;font-size:300%;">Welcome to My Website!</p>
+  <p After many trials, I changed the font and centered the header</p>
   
 <p> I added an Italian Renaissance picture of a dog by Tintoretto </p>
   
