--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
   
 <p> I added an Italian Renaissance picture of a dog by Tintoretto because why not dog? </p>
  
-<img src="VRDP.jpeg alt=Dog at Center">
+<img src="VRDP.jpg alt=Dog at Center">
 
 </html>
