--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   
 <p> I added an Italian Renaissance picture of a dog by Tintoretto because why not dog? </p>
  
-<img src="https://artuk.org/discover/artworks/christ-washing-the-disciples-feet-36065">
+<img src="https://d3d00swyhr67nd.cloudfront.net/w1200h1200/collection/TWMS/SAG/TWMS_SAG_TWCMS_E3691-001.jpg">
 
 </html>
 
