--- a/index.html
+++ b/index.html
@@ -13,15 +13,18 @@
  
 <img src="https://d3d00swyhr67nd.cloudfront.net/w1200h1200/collection/TWMS/SAG/TWMS_SAG_TWCMS_E3691-001.jpg">
 
-.button {
-    background-color: #04AA6D; /* Green */
-    border: none;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
+<style>
+    .custom-button {
+      background-color: #4CAF50;
+      color: white;
+      padding: 10px 20px;
+      font-size: 16px;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+    }
+  </style>
+  <title>Styled Button Example</title>
 
 </html>
 
