--- a/index.html
+++ b/index.html
@@ -13,7 +13,20 @@
  
 <img src="https://d3d00swyhr67nd.cloudfront.net/w1200h1200/collection/TWMS/SAG/TWMS_SAG_TWCMS_E3691-001.jpg">
 
-
+<meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
+    .custom-button {
+      background-color: #4CAF50;
+      color: white;
+      padding: 10px 20px;
+      font-size: 16px;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+    }
+  </style>
+  <title>Styled Button Example</title>
 
 </html>
 
