--- a/index.html
+++ b/index.html
@@ -2,7 +2,18 @@
 <body style="background-color:powderblue;"><html>
 
 <head>
-
+    .button {
+        "background-color: #04AA6D;
+        border: none;
+        color: white;
+        padding: 15px 32px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 16px;
+        margin: 4px 2px;
+        cursor: pointer;""
+      }
 </head>
 
 <p style="text-align:center;font-family:verdana;font-size:300%;">Welcome to My Website!</p>
@@ -13,22 +24,7 @@
  
 <img src="https://d3d00swyhr67nd.cloudfront.net/w1200h1200/collection/TWMS/SAG/TWMS_SAG_TWCMS_E3691-001.jpg">
 
-<head>
-    <style>
-    .button {
-      background-color: #04AA6D;
-      border: none;
-      color: white;
-      padding: 15px 32px;
-      text-align: center;
-      text-decoration: none;
-      display: inline-block;
-      font-size: 16px;
-      margin: 4px 2px;
-      cursor: pointer;
-    }
-    </style>
-    </head>
+
 
 </html>
 
