--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <body style="background-color:powderblue;"><html>
 
 <head>
-    .button {
+    button 
         "background-color: #04AA6D;
         border: none;
         color: white;
@@ -13,7 +13,7 @@
         font-size: 16px;
         margin: 4px 2px;
         cursor: pointer;""
-      }
+      
 </head>
 
 <p style="text-align:center;font-family:verdana;font-size:300%;">Welcome to My Website!</p>
