--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <body style="background-color:powderblue;"><html>
 
 <head>
-    button 
+    <p button 
         "background-color: #04AA6D;
         border: none;
         color: white;
@@ -12,7 +12,7 @@
         display: inline-block;
         font-size: 16px;
         margin: 4px 2px;
-        cursor: pointer;""
+        cursor: pointer;"></p>
       
 </head>
 
