--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 
     <p> After many trials, I changed the title font and size, the background color and centered the header.</p>
     
-    <p> I added an Italian Renaissance picture of a dog by Tintoretto because why not dog? </p>
+    <p> I added an Italian Renaissance picture of a dog attributed to Tintoretto because why not dog? </p>
     
-    <img src="https://d3d00swyhr67nd.cloudfront.net/w1200h1200/collection/TWMS/SAG/TWMS_SAG_TWCMS_E3691-001.jpg">
+    <img src="https://d3d00swyhr67nd.cloudfront.net/w1200h1200/collection/TWMS/SAG/TWMS_SAG_TWCMS_E3691-001.jpg" class="center">
 
 </body>
 
