--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     
     <img src="https://d3d00swyhr67nd.cloudfront.net/w1200h1200/collection/TWMS/SAG/TWMS_SAG_TWCMS_E3691-001.jpg" class="center">
 
+    <button onclick="window.location.href='https://artuk.org/discover/stories/painting-dogs-in-renaissance-venice'">More Dogs!</button>
 </body>
 
 </html>
