--- a/index.html
+++ b/index.html
@@ -12,11 +12,19 @@
 
     <p> After many trials, I changed the title font and size, the background color and centered the header.</p>
     
-    <p> I added an Italian Renaissance picture of a dog attributed to Tintoretto because why not dog? </p>
+    <p> I added an Italian Renaissance picture of a dog attributed to Tintoretto because why not dog?
+         And I added a button that leads to more bougie dog paintings. </p>
     
-    <img src="https://d3d00swyhr67nd.cloudfront.net/w1200h1200/collection/TWMS/SAG/TWMS_SAG_TWCMS_E3691-001.jpg" class="center">
-
-    <button onclick="window.location.href='https://artuk.org/discover/stories/painting-dogs-in-renaissance-venice'">More Dogs!</button>
+    <img src="https://d3d00swyhr67nd.cloudfront.net/w1200h1200/collection/TWMS/SAG/TWMS_SAG_TWCMS_E3691-001.jpg" 
+    class="center">
+<br>
+<br>
+    <button onclick="window.location.href='https://artuk.org/discover/stories/painting-dogs-in-renaissance-venice'">
+        More Dogs!</button>
+        <br>
+        <br>
+        <p>How I feel after completing basic coding skills</p>
+        <img src="PPNC.gif"
 </body>
 
 </html>
