--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <br>
         <br>
         <p>How I feel after completing basic coding skills</p>
-        <img src="PPNC.gif"
+        <img src="PPNC.gif" class="centergif">
 </body>
 
 </html>
