--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         More Dogs!</button>
         <br>
         <br>
-        <p>How I feel after completing basic coding skills</p>
+        <p style="text-align: center;">How I feel after completing basic coding skills</p>
         <img src="PPNC.gif" class="centergif">
 </body>
 
