--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
         <img src="PPNC.gif" class="centergif">
 
 <head>
-  <meta charset="UTF-8">
+    <style>
+    /* Centering content */  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>NASA Astronomy Picture of the Day</title>
 </head>
@@ -55,6 +56,8 @@
     document.getElementById('image').src = data.url;
     document.getElementById('explanation').textContent = data.explanation;
   </script>
+        </style>
+    
 
 </body>
 
