--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
         <img src="PPNC.gif" class="centergif">
 
 <head>
-    <style>
-    /* Centering content */  <meta charset="UTF-8">
+     <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>NASA Astronomy Picture of the Day</title>
+    <style>
+    /* Centering content */   <title>NASA Astronomy Picture of the Day</title>
 </head>
 <body>
 
