--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
 <head>
      <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>
-    /* Centering content */   <title>NASA Astronomy Picture of the Day</title>
+      <title>NASA Astronomy Picture of the Day</title>
 </head>
 <body>
 
