--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
 <head>
      <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>NASA Astronomy Picture of the Day</title>
+      <title>NASA Astronomy Picture of the Day class=center </title>
 </head>
 <body>
 
   <h1 id="title"></h1>
   <img id="image" src="" alt="Astronomy Picture of the Day">
-  <p id="explanation"></p>
+  <p id="explanation"> class=center</p>
 
   <script>
     // JSON data provided
