--- a/index.html
+++ b/index.html
@@ -81,6 +81,21 @@ function draw() {
 }
 
 </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Embedded Link</title>
+</head>
+<body>
+
+<!-- This is the embedded link -->
+<a href="https://teachablemachine.withgoogle.com/models/9OoO5c7F4</a>
+
+</body>
+</html>
+
 
 </html>
 
