--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ function draw() {
   let amp = map(mouseY, 0, height, 1, 0.01); // Map mouseY to an amplitude range
   osc.amp(amp); // Set oscillator amplitude
 }
-
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
