--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@ function draw() {
 }
 <!DOCTYPE html>
 <html lang="en">
+    <body>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
